# grpc-node-rust

./: .gitignore  README.md
grpc-node/: news.proto  package-lock.json  package.json  tsconfig.json
grpc-node/src/client/: app.ts
grpc-node/src/server/: app.ts
grpc-rust/: Cargo.toml
grpc-rust/client/: build.rs
grpc-rust/client/src/: main.rs
grpc-rust/server/src/: main.rs
protos/: voting.proto
