[package]
name = "grpc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"

[dependencies]
protobuf="2"
httpbis={git="https://github.com/stepancheg/rust-http2"}
grpc="*"
grpc-protobuf="*"

[build-dependencies]
protoc-rust-grpc="0.8.2"
